--- a/es4/es4.html
+++ b/es4/es4.html
@@ -11,24 +11,24 @@
     <title>CSS Lessons</title>
   </head>
   <body>
-    <section>
+    <main>
     <nav>
         <div>
             <div>
                 <img href="logo.jpg" alt="logo">
             </div>
             <div >
-            <ul>
-                <li class="links">
+            <ul class="links">
+                <li>
                     <a href="">link1</a>
                 </li>
-                 <li class="links">
+                 <li>
                     <a href="">link2</a>
                 </li>
-                <li class="links">
+                <li>
                     <a href="">link3</a>
                 </li>
-                <li class="links"> 
+                <li> 
                     <a href="">link4</a>
                 </li>
             </ul>
@@ -42,6 +42,6 @@
             </div>
         </div>
     </nav>   
-    </section>
+    </main>
   </body>
 </html>
