--- a/es4/es4.html
+++ b/es4/es4.html
@@ -13,11 +13,8 @@
   <body>
     <main>
     <nav>
+        <img src="logoxbox.png" alt="logo">
         <div>
-            <div>
-                <img href="logo.jpg" alt="logo">
-            </div>
-            <div >
             <ul class="links">
                 <li>
                     <a href="">link1</a>
@@ -32,16 +29,11 @@
                     <a href="">link4</a>
                 </li>
             </ul>
-            </div>
-            <div>
-                <img href="avatar.jpg" alt="avatar image">
-            </div>
-            <div>        
-                <input type="text">
-                <label for="text">username</label>
-            </div>
+        </div>
+        <div class="avatar">
+            <img src="avatar.png" alt="avatar image">       
+            <p>Username</p>
         </div>
     </nav>   
-    </main>
   </body>
 </html>
