--- a/es6/es6.html
+++ b/es6/es6.html
@@ -5,7 +5,25 @@
         <link href="es6.css" rel="stylesheet">
     </head>
     <body>
-    
-        
+        <main>
+            <div class="initial">0</div>
+            <div class="plus">+</div>
+            <div class="minus">-</div>
+            <div class="molt">x</div>
+            <div class="div">:</div>
+            <div class="seven">7</div>
+            <div class="eight">8</div>
+            <div class="nine">9</div>
+            <div class="for">4</div>
+            <div class="five">5</div>
+            <div class="six">6</div>
+            <div class="one">1</div>
+            <div class="two">2</div>
+            <div class="three">3</div>
+            <div class="zero">0</div>
+            <div class="dot">.</div>
+            <div class="clear">AC</div>
+            <div class="equal">=</div>
+        </main>
     </body>
 </html>
