--- a/es4/es4.html
+++ b/es4/es4.html
@@ -11,11 +11,10 @@
     <title>CSS Lessons</title>
   </head>
   <body>
-    <main>
-    <nav>
+    <aside>
         <img src="logoxbox.png" alt="logo">
-        <div>
-            <ul class="links">
+        <div class="links">
+            <ul>
                 <li>
                     <a href="">link1</a>
                 </li>
@@ -34,6 +33,6 @@
             <img src="avatar.png" alt="avatar image">       
             <p>Username</p>
         </div>
-    </nav>   
+    </aside> 
   </body>
 </html>
