--- a/es8/es8.html
+++ b/es8/es8.html
@@ -10,15 +10,15 @@
 <body>
     <div>
         <card>
-            <img href="images/warzone1.jpeg">
+            <img src="warzone1.jpg">
             <p>prima card</p>
         </card>
         <card>
-            <img href="es8/images/warzone.jpeg">
+            <img src="warzone.jpeg">
             <p>seconda card</p>
         </card>
         <card>
-            <img href="images/warzone2.jpg" >
+            <img src="warzone2.jpg" >
             <p>terza card</p>
         </card>
     </div>
